Use OpenAPI specification version 3.0.0
