# llm_server/models/__init__.py
@@ -1,6 +1,6 @@
 # import models into model package
 from llm_server.models.http_validation_error import HTTPValidationError
+from llm_server.models.location_inner import LocationInner
 from llm_server.models.movie_review import MovieReview
 from llm_server.models.movie_summary import MovieSummary
 from llm_server.models.validation_error import ValidationError
-from llm_server.models.validation_error_loc_inner import ValidationErrorLocInner
