# llm_server/models/location_inner.py
@@ -1,0 +1,27 @@
+from datetime import date, datetime
+from typing import Dict, List, Type
+
+from llm_server import util
+from llm_server.models.base_model import Model
+
+
+class LocationInner(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self):
+        """LocationInner - a model defined in OpenAPI"""
+        self.openapi_types = {}
+
+        self.attribute_map = {}
+
+    @classmethod
+    def from_dict(cls, dikt: dict) -> "LocationInner":
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :return: The Location_inner of this LocationInner.
+        """
+        return util.deserialize_model(dikt, cls)
