# llm_server/openapi/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.0
 info:
   title: FastAPI
   version: 0.1.0
@@ -38,21 +38,22 @@ components:
         detail:
         - msg: msg
           loc:
-          - ValidationError_loc_inner
-          - ValidationError_loc_inner
+          - Location_inner
+          - Location_inner
           type: type
         - msg: msg
           loc:
-          - ValidationError_loc_inner
-          - ValidationError_loc_inner
+          - Location_inner
+          - Location_inner
           type: type
       properties:
         detail:
           items:
             $ref: '#/components/schemas/ValidationError'
-          title: detail
+          title: Detail
           type: array
       title: HTTPValidationError
+      type: object
     MovieReview:
       example:
         review: review
@@ -68,6 +69,7 @@ components:
       - review
       - reviewer
       title: MovieReview
+      type: object
     MovieSummary:
       example:
         summary: summary
@@ -95,18 +97,19 @@ components:
       - summary
       - title
       title: MovieSummary
+      type: object
     ValidationError:
       example:
         msg: msg
         loc:
-        - ValidationError_loc_inner
-        - ValidationError_loc_inner
+        - Location_inner
+        - Location_inner
         type: type
       properties:
         loc:
           items:
-            $ref: '#/components/schemas/ValidationError_loc_inner'
-          title: loc
+            $ref: '#/components/schemas/Location_inner'
+          title: Location
           type: array
         msg:
           title: Message
@@ -119,8 +122,9 @@ components:
       - msg
       - type
       title: ValidationError
-    ValidationError_loc_inner:
+      type: object
+    Location_inner:
       anyOf:
       - type: string
       - type: integer
-      title: ValidationError_loc_inner
+      title: Location_inner
